--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo Inicial Tema 3</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Objeto Window</h1>
+    </header>
+    <section>
+        <h2>Objeto Window</h2>
+        <p>El objeto window es la ventana principal del navegador</p>
+        <h3>Gestión de ventanas</h3>
+        <button onclick="abrirNuevaVentana()">Abrir Nueva Ventana</button>
+        <button onclick="abrirMismaVentana()">Abrir Misma Ventana</button>
+
+        <!--Mala práctica. Con los videos les damos un pase-->
+        <!--No está bien añadir páginas web embebidas-->
+        <iframe src="https://hotellallastra.app" width="400" height="300"></iframe>
+
+        <br>
+        <br>
+
+    </section>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
