--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
         <br>
         <br>
 
+        <h3>Propiedades y métodos asociado al ordenador</h3>
+        <p>Ancho de ventana: <span id="anchoVentana"></span> Píxeles</p>
     </section>
+
+    <section>
+        <h2>Objeto location</h2>
+        <p>El objeto location se utiliza para acceder a la URL del navegador</p>
+        <p>URL actual: <span id="urlActual"></span></p>
+    </section>
+
+    <section>
+        <h2>Objeto navigator</h2>
+        <p>El objeto navigator proporciona información sobre el navegador del usuario</p>
+        <p>Navegador: <span id="navegadorInfo"></span></p>
+    </section>
+
     <script src="scripts/index.js"></script>
 </body>
 </html>
